--- a/README
+++ b/README
@@ -54,3 +54,65 @@ Run the scripts in the following order:
 % Execute in MATLAB
 run('get_phase_diff.m');
 run('doppler_needle_vis.m');
+
+
+
+# OCT Phase Data Analysis: Distance Calculation Explained
+
+## Introduction
+Optical Coherence Tomography (OCT) employs optical interferometry to non-invasively image internal structures of biological tissues. A pivotal aspect of OCT analysis is translating phase changes in optical signals into accurate physical distances. This document details the mathematical and theoretical underpinnings of this conversion process.
+
+## Phase Data Processing
+
+### Conversion of 8-bit Phase Images
+OCT phase data, initially captured in an 8-bit format, undergoes a transformation to represent true phase values. The transformation formula is:
+
+$$
+\text{phase} = \left( \text{phaseImage8bit} \times \frac{2\pi}{2^\text{{number\_bits}} - 1} \right) - \pi
+$$
+
+Here, `number_bits` is 8, indicating the original bit depth of the image.
+
+### Calculation of Phase Differences
+The next step involves computing the phase differences between subsequent A-lines. This computation varies depending on the OCT machine type:
+
+For `MGH`:
+
+$$
+\text{diff\_ph1}[:, i, j] = \text{ph1}[:, i, j] - \text{ph1}[:, i + 2, j]
+$$
+
+For `SPARC`:
+
+$$
+\text{diff\_ph1}[:, i, j] = \text{ph1}[:, i, j] - \text{ph1}[:, i + 1, j]
+$$
+
+### Normalization of Phase Differences
+The phase differences are then averaged across each A-scan within the region of interest for each frame. Subsequently, these averages are concatenated and normalized by subtracting their mean.
+
+## Distance Calculation: Principles of Optical Interferometry in OCT
+
+### Understanding Normalized Phase Change
+In OCT, the light is divided into two paths: a reference path and a sample path. The phase change of the light, as it travels through tissue, directly correlates with the distance it travels. This phase change forms the basis for calculating the physical distance within the tissue.
+
+### Role of Wavelength
+The wavelength of the light source in OCT is crucial. The phase change experienced by the light is proportional to the wavelength. Thus, knowing the wavelength allows for the conversion of phase changes into actual physical distances.
+
+### Refractive Index Consideration
+The refractive index of the tissue plays a significant role in adjusting the distance calculation. This index measures the reduction in the speed of light within the tissue compared to its speed in a vacuum, affecting how the wavelength and thus the phase change should be interpreted in terms of physical distance.
+
+### Constants in the Formula
+The factor of `4π` in the formula emerges from the definition of phase (with `2π` radians equating to one complete cycle) and the nature of OCT, which involves round-trip travel of light, effectively doubling the observed phase changes.
+
+## The Formula for Distance Calculation
+The conversion of normalized phase changes to distances is articulated through the formula:
+
+$$
+\text{distance} = \frac{\text{normalized\_avg\_a\_scan} \times \text{wavelength}}{4\pi \times \text{refractive\_index}}
+$$
+
+This formula is an application of the principles of optical interferometry in the context of OCT. It enables the translation of optical data (phase changes) into meaningful physical measurements, fundamental to the creation of detailed tissue images in OCT imaging.
+
+## Conclusion
+The mathematical process of converting phase changes to physical distances in OCT is a testament to the application of optical interferometry principles in modern medical imaging technology. This process is crucial for advancements in medical diagnostics and research, offering insights into the internal structures of biological tissues with remarkable precision.
